re PR c++/48883 (?: ternary operator fails in certain contexts - link error)

PR c++/48883
	PR c++/49609
	* pt.c (resolve_nondeduced_context): Call mark_used.

From-SVN: r175764